--- a/style.css
+++ b/style.css
@@ -716,6 +716,20 @@ input[type="submit"]:hover, button[type=submit]:hover {background-color: #222}
 form.cart {
     margin-bottom: 25px;
 }
+.login-op-button {
+    background-color: rgb(138, 8, 8);
+  border: none;
+  color:white;
+  padding: 20px 50px;
+  text-align: center;
+  display: inline-block;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 16px;
+}
+.login-op-button:hover {
+    background-color:#000
+}
 .product-inner-category {
     margin-bottom: 30px;
 }
